--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:icon="@drawable/icono_app"
         android:label="@string/app_name"
+        android:roundIcon="@drawable/icono_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".CrudRefacciones"
+            android:exported="false" />
+        <activity
+            android:name=".CrudTickets"
+            android:exported="false" />
         <activity
             android:name=".CrudTecnicos"
             android:exported="false" />
@@ -21,17 +29,20 @@
             android:name=".MenuMaster"
             android:exported="false" />
         <activity
-            android:name=".MenuEmpleado"
-            android:exported="false" />
+            android:name=".MenuTecnico"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
