--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/icono_app"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/icono_app"
+        android:icon="@drawable/logotipo"
+        android:label="Multiservicios CRA"
+        android:roundIcon="@drawable/logotipo"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:usesCleartextTraffic="true"
@@ -30,6 +30,9 @@
             android:exported="false" />
         <activity
             android:name=".MenuTecnico"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -37,9 +40,6 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
