Se agrego el SplashScreen Y se cambio la fuente a la de audiowide

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".CrudRefacciones"
-            android:exported="false" />
-        <activity
-            android:name=".CrudTickets"
+            android:name=".SplashScreen"
             android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -28,6 +25,12 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
+        <activity
+            android:name=".CrudRefacciones"
+            android:exported="false" />
+        <activity
+            android:name=".CrudTickets"
+            android:exported="false" />
         <activity
             android:name=".CrudTecnicos"
             android:exported="false" />
@@ -40,7 +43,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
 
         <meta-data
             android:name="preloaded_fonts"
