Cambios en todos lados xd, menu tecnico, nuevos layouts etc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,17 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".DetalleTickets"
+            android:exported="false" />
+        <activity
+            android:name=".activity_tickets_tecnicos"
+            android:exported="false" />
+        <activity
             android:name=".CrudRefacciones"
             android:exported="false" />
         <activity
             android:name=".CrudTickets"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".CrudTecnicos"
             android:exported="false" />
@@ -34,7 +39,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
