--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
 }
