--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
